Digital/objects/Placement_Content_Detail__c.object
<CustomObject>
    <label>Placement Content Detail</label>
    <nameField>
        <displayFormat>PCD-{000000000}</displayFormat>
        <label>Placement Content Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placement Content Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Asset_Path__c</fullName>
        <inlineHelpText>Enter creative delivery shared drive path</inlineHelpText>
        <label>Asset Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Placement_Content__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Additional placement comments or instructions can be added here</inlineHelpText>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copy__c</fullName>
        <inlineHelpText>Enter copy for offer/non-offer placements</inlineHelpText>
        <label>Copy</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Formula_Layout_Type__c</fullName>
        <formula>Placement_Content__r.Formula_Layout_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Layout Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_Text__c</fullName>
        <inlineHelpText>Enter URL that should link to a placement without live site details. For e.g. enter “/vs/newarrivals/shop-collection” without “https://victoriassecret.com/”</inlineHelpText>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Type__c</fullName>
        <formula>Placement_Content__r.Placement_Page_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Content_Detail_Self__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Content Detail</label>
        <referenceTo>Placement_Content_Detail__c</referenceTo>
        <relationshipLabel>Placement Content Details</relationshipLabel>
        <relationshipName>Placement_Content_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Content</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipLabel>Placement Content Details</relationshipLabel>
        <relationshipName>Placement_Content_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Layout__c</fullName>
        <formula>Placement_Content__r.Placement_Layout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Placement Layout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Library__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Library</label>
        <referenceTo>Placement_Library__c</referenceTo>
        <relationshipLabel>Placement Content Details</relationshipLabel>
        <relationshipName>Placement_Content_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Slides__c</fullName>
        <inlineHelpText>Select slide number to differentiate the slides in a carousel</inlineHelpText>
        <label>Slides</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Slide 1</fullName>
                </value>
                <value>
                    <fullName>Slide 2</fullName>
                </value>
                <value>
                    <fullName>Slide 3</fullName>
                </value>
                <value>
                    <fullName>Slide 4</fullName>
                </value>
                <value>
                    <fullName>Slide 5</fullName>
                </value>
                <value>
                    <fullName>Slide 6</fullName>
                </value>
                <value>
                    <fullName>Slide 7</fullName>
                </value>
                <value>
                    <fullName>Slide 8</fullName>
                </value>
                <value>
                    <fullName>Slide 9</fullName>
                </value>
                <value>
                    <fullName>Slide 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <inlineHelpText>Select content type from the drop down for carousel placement.</inlineHelpText>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                    <default>true</default>
                    <label>Image</label>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>Carousel</fullName>
                    <isActive>false</isActive>
                    <label>Carousel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_No__c</fullName>
        <label>S No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Placement_Content__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Placement_Content__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>